<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kniffina.android.facebookposts.CreateEditDelete"
    android:id="@+id/create_edit_delete_layout"
    android:background="@color/medium_grey"
    android:orientation="vertical"
    android:weightSum="16"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.5"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/main_menu_title"
        android:textSize="22sp"
        android:textAlignment="center"
        android:textColor="@color/white_text"
        android:textStyle="bold"

        />
    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:layout_weight=".5"/>

    <Button
        android:id="@+id/edit_post_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/edit_feed"
        style="@style/CreateEditDeleteButton"
        />

    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/create_post_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/create_feed"
        style="@style/CreateEditDeleteButton"
        />

    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/delete_post_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/delete_feed"
        style="@style/CreateEditDeleteButton"
        />

    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:layout_weight="1"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        >
        <com.facebook.login.widget.LoginButton
            android:id="@+id/main_menu_fb_login"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="@style/facebook_button_custom"
            android:gravity="center"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>


</LinearLayout>